--- a/style.css
+++ b/style.css
@@ -20,20 +20,23 @@ body {
 }
 
 .imagem img {
+    
     margin: 30px;
     width: 200px;
 }
 
+
+
 .meio {
     text-align: center;
-    font: 500 37px 'outer-sans';
+    font: 500 32px 'outer-sans';
     color: white;
 }
 
 .elementos {
     display: grid;
     text-align: center;
-    margin: 35px;
+    margin: 18px;
     font: 300 27px 'outer-sans';
     justify-content: center;
 
@@ -49,9 +52,9 @@ a {
     display: inherit;
     align-items: center;
     width: 400px;
-    height: 80px;
+    height: 70px;
     background-color: white;
-    margin: 20px;
+    margin: 15px;
     border-radius: 27px;
 }
 
@@ -64,35 +67,75 @@ footer img {
     width: 50px;
     margin: 5px 15px;
     padding-bottom: 3%;
+    margin:12px;
+
 }
 
 @media screen and (max-width:520px) {
+    .imagem img{
+        width: 93px;
+    }
     .botoes {
-        width: 320px;
+        width: 270px;
+        height: 50px;
+        margin: 4px;
     }
 
     .meio {
-        font-size: 20px;
+        font-size: 16px;
     }
 
-    .elementos{
-        font-size: 22px;
+    .elementos {
+        font-size: 19px;
     }
 
 }
 
 @media screen and (max-width:617px) {
+    .imagem img{
+        width: 93px;
+    }
     .meio {
-        font-size: 25px;
+        font-size: 20px;
+    }
+
+    .botoes {
+        width: 300px;
+        height: 50px;
+        margin: 9px;
+    }
+
+    .elementos {
+        font-size: 18px;
+    }
+
+    footer img {
+        width: 40px;
+        margin: 2px 7px;
+
     }
 
 }
 
 @media screen and (max-width:400px) {
+.imagem img{
+    width: 88px;
+    margin:12px;
+padding-top: 5%;
+}
+
     .botoes {
-        width: 310px;
-    } .meio {
-        font-size: 20px;
+        width: 260px;
+        height: 50px;
     }
 
+    .meio {
+        font-size: 16px;
+    }
+
+    footer img {
+        width: 30px;
+        margin: 2px 7px;
+
+    }
 }
